Fixed nav link animations disarranging elements in mobile view by adding same-colored boborders to offset missing space from the border reset.

--- a/css/style.css
+++ b/css/style.css
@@ -445,20 +445,24 @@ footer > div.copyright-section {
     }
 
     .container > header > .links > nav > a.main-link:first-child {
-        border-top: 1.5px solid grey;
+        border-top: 1px solid grey;
     }
 
     .container > header > .links > nav > a.main-link:last-child {
-        border-bottom: 1.5px solid grey;
+        border-bottom: 1px solid grey;
     }
 
     .container > header > .links > nav > a.main-link:hover {
         border: none;
+        border-top: 0.5px solid silver;
+        border-bottom: 0.5px solid silver;
         color: snow;
         background-color: silver;
-        transition-duration: 375ms;
+        transition-duration: 500ms;
         transition-property: all;
         padding: 20px 0;
+        margin: 0;
+        z-index: 1;
     }
     
     .container > header > nav > a.main-link:active {
